# cxxprimitive

./: .clang-format  .gitattributes  .gitignore  CMakeLists.txt  README.md  Worker.cpp  Worker.h  drawingboard.cpp  drawingboard.h  image.cpp  image.h  line.cpp  line.h  lineart.cpp  log.h  rasterizer.cpp  rasterizer.h  shape.h  state.h  testDrawLine.cpp  threadpool.h  timer.h  triangle.cpp  triangle.h  util.cpp  util.h
test/: CMakeLists.txt  test_line.cpp  test_rgb2gray.cpp  test_shape_triangle.cpp
